cmake_minimum_required (VERSION 3.0.2)

set(ENABLE_EMSCRIPTEN $ENV{ENABLE_EMSCRIPTEN})

include_directories(include)

set(SOURCES src/application_cache.cc
	src/array.cc
	src/array_buffer.cc
	src/array_buffer_view.cc
	src/attr.cc
	src/audio_track.cc
	src/audio_track_list.cc
	src/auto_release_pool.cc
	src/bar_prop.cc
	src/blob.cc
	src/canvas_gradient.cc
	src/canvas_pattern.cc
	src/canvas_rendering_context_2d.cc
	src/character_data.cc
	src/comment.cc
	src/console.cc
	src/css_rule.cc
	src/css_rule_list.cc
	src/css_style_declaration.cc
	src/css_style_sheet.cc
	src/date.cc
	src/document.cc
	src/document_fragment.cc
	src/document_type.cc
	src/dom_error.cc
	src/dom_implementation.cc
	src/dom_token_list.cc
	src/element.cc
	src/event.cc
	src/event_target.cc
	src/export.cc
	src/external.cc
	src/file_reader.cc
	src/float32_array.cc
	src/float64_array.cc
	src/history.cc
	src/hit_region_options.cc
	src/html_base_element.cc
	src/html_body_element.cc
	src/html_canvas_element.cc
	src/html_collection.cc
	src/html_content_element.cc
	src/html_div_element.cc
	src/html_element.cc
	src/html_head_element.cc
	src/html_image_element.cc
	src/html_media_element.cc
	src/html_script_element.cc
	src/html_source_element.cc
	src/html_style_element.cc
	src/html_video_element.cc
	src/idb_database.cc
	src/idb_environment.cc
	src/idb_factory.cc
	src/idb_index.cc
	src/idb_index_parameters.cc
	src/idb_object_store.cc
	src/idb_open_db_request.cc
	src/idb_request.cc
	src/idb_transaction.cc
	src/idb_version_change_event.cc
	src/image_bitmap.cc
	src/image_data.cc
	src/link_style.cc
	src/location.cc
	src/media_controller.cc
	src/media_error.cc
	src/media_list.cc
	src/mime_type.cc
	src/mime_type_array.cc
	src/native_array.cc
	src/native_object.cc
	src/navigator.cc
	src/node.cc
	src/node_filter.cc
	src/node_iterator.cc
	src/node_list.cc
	src/object.cc
	src/path2d.cc
	src/performance.cc
	src/performance_entry.cc
	src/performance_navigation.cc
	src/performance_timing.cc
	src/plugin.cc
	src/plugin_array.cc
	src/processing_instruction.cc
	src/promise.cc
	src/range.cc
	src/regexp.cc
	src/rendering_context.cc
	src/response.cc
	src/storage.cc
	src/string.cc
	src/style_sheet.cc
	src/style_sheet_list.cc
	src/svgmatrix.cc
	src/text.cc
	src/text_metrics.cc
	src/text_track.cc
	src/text_track_cue.cc
	src/text_track_cue_list.cc
	src/text_track_list.cc
	src/time_ranges.cc
	src/tree_walker.cc
	src/uint8_array.cc
	src/uint8_clamped_array.cc
	src/video_track.cc
	src/video_track_list.cc
	src/webgl_active_info.cc
	src/webgl_buffer.cc
	src/webgl_context_attributes.cc
	src/webgl_context_event.cc
	src/webgl_extension.cc
	src/webgl_framebuffer.cc
	src/webgl_object.cc
	src/webgl_program.cc
	src/webgl_renderbuffer.cc
	src/webgl_rendering_context.cc
	src/webgl_shader.cc
	src/webgl_shader_precision_format.cc
	src/webgl_texture.cc
	src/webgl_uniform_location.cc
	src/window.cc
	src/xml_document.cc
	src/xml_http_request.cc)

if ($ENV{ENABLE_EMSCRIPTEN})
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Oz -g -std=c++11 --memory-init-file 0 --llvm-lto 1 --bind -s DEMANGLE_SUPPORT=1 -s WASM=0 -s NO_FILESYSTEM=1 -DENABLE_EMSCRIPTEN=1 -DPROPERTY_TRACE=1")
   add_library(html5 STATIC bind.cc ${SOURCES})
else()
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g -std=c++11")
   add_library(html5 STATIC ${SOURCES})
endif()
